# speed_to_lead

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml
.claude/: CROSS_REPO.md  handoff.md  settings.local.json  strategy.md
.tmp/: buying_signal_payloads.jsonl  conversation_data_sources.md  create_sheets.py  fm.py  funnel_metrics.py  funnel_report.py  gen_script.py  post_sheets_to_slack.py  post_sheets_v2.py  post_sheets_v3.py  prompt_quality_session_summary.md  prompt_test_results.md  prompt_test_results_v2.md  prompt_test_results_v3.md  prompt_test_results_v4.md  query_prod.py  reply_progression_report.py  repost_final.py  repost_with_extra.py  standup.md  standup_today.md  unicode_test.md
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
docs/: agent_resource_library.md
plans/: automate-gift-leads.md
scripts/: backfill_changelog.py  backfill_positive_replies.py  backfill_prospects.py  pre-commit-check.sh  reset_db.py  standup.py  test_prompts.py
tests/: __init__.py  conftest.py  test_admin_gift_leads_tiered.py  test_apify.py  test_backfill_changelog.py  test_bottleneck_ping.py  test_buying_signal.py  test_buying_signal_outreach.py  test_campaign_monitor.py  test_changelog_models.py  test_classification.py  test_clients.py  test_comment_drafter.py  test_config.py  test_connection_webhooks.py  test_context_awareness.py  test_costs.py  test_deepseek.py  test_engagement.py  test_engagement_router.py  test_engagement_slack.py  test_expire_stale_drafts.py  test_followup_removal.py  (+29 more)
(+86 files in other folders)
