[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speed-to-lead"
version = "0.1.0"
description = "HeyReach webhook handler with AI-powered LinkedIn reply suggestions via Telegram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlalchemy>=2.0.25,<2.1.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "slack-sdk>=3.27.0,<4.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "openai>=1.10.0,<2.0.0",
    "httpx>=0.26.0,<1.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "anthropic>=0.39.0,<1.0.0",
    "apify-client>=1.6.0,<2.0.0",
    "tzdata>=2024.1",
    "gspread>=6.0.0,<7.0.0",
    "google-auth>=2.27.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
